@@ -797,11 +797,12 @@ declare 183 generic {
 
 #
 # Added in tcl8.5a5 for compiler/executor experimentation.
+# Disabled in Tcl 8.5.1; experiments terminated. :/
 #
-declare 197 generic {
-    int TclCompEvalObj(Tcl_Interp *interp, Tcl_Obj *objPtr,
-		        CONST CmdFrame* invoker, int word)
-}
+#declare 197 generic {
+#    int TclCompEvalObj(Tcl_Interp *interp, Tcl_Obj *objPtr,
+#		        CONST CmdFrame* invoker, int word)
+#}
 declare 198 generic {
     int TclObjGetFrame(Tcl_Interp *interp, Tcl_Obj *objPtr,
 	    CallFrame **framePtrPtr)
